syntax = "proto3";

package secrets;

option go_package = "/secrets";

message Data {
    string title = 1;
    string value = 2;
}

message CreateSecretRequest {
    string type = 1;
    repeated Data data = 2;
}

message CreateSecretResponse {
    string status = 1;
}

message GetSecretRequest {
    string secret_id = 1;
}

message GetSecretResponse {
    string id = 1;
    string status = 2;
    string type = 3;
    repeated Data secret = 4;
}

message DeleteSecretRequest {
    string secret_id = 1;
}

message DeleteSecretResponse {
    string status = 1;
}

message GetSecretsRequest {

}

message GetSecretsResponse {
    message Secret {
      string id = 1;
      string type = 2;
      repeated Data data = 4;
    }
    string status = 1;
    repeated Secret secrets = 2;
  }

service Secrets {
    rpc CreateSecret(CreateSecretRequest) returns (CreateSecretResponse) {}
    rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}
    rpc GetSecrets (GetSecretsRequest) returns (GetSecretsResponse) {}
    rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse) {}
}